{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 125,
  "lineage": "e13a00db-4be8-cb55-aac8-a3feb3f90952",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042d2fe28dd0d3fdb",
            "arn": "arn:aws:ec2:us-east-1:537124979643:instance/i-0a0d5a1fd0960528c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0d5a1fd0960528c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fce0c7bab3cbc319",
            "private_dns": "ip-172-16-4-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.4.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09fa90cd4b3981e1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc4f3e1abffd17d1",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5591bb34fafa47b"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:internet-gateway/igw-0a2f933ba243d984b",
            "id": "igw-0a2f933ba243d984b",
            "owner_id": "537124979643",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform IG",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform IG",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537124979643:loadbalancer/app/Terraform-ALB/72dad227cc656bf5",
            "arn_suffix": "app/Terraform-ALB/72dad227cc656bf5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-ALB-2125402128.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:537124979643:loadbalancer/app/Terraform-ALB/72dad227cc656bf5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a949dba2bea9a99"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b497c5f8526cf81"
              },
              {
                "subnet_id": "subnet-05f94b37fcc9c187d"
              }
            ],
            "subnets": [
              "subnet-04b497c5f8526cf81",
              "subnet-05f94b37fcc9c187d"
            ],
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform-ALB",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform-ALB",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-02373a82ff785ae72",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537124979643:listener/app/Terraform-ALB/72dad227cc656bf5/21d2f05ac22761ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:537124979643:targetgroup/ALB-TG/f6580c7699a341e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:537124979643:listener/app/Terraform-ALB/72dad227cc656bf5/21d2f05ac22761ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:537124979643:loadbalancer/app/Terraform-ALB/72dad227cc656bf5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537124979643:targetgroup/ALB-TG/f6580c7699a341e8",
            "arn_suffix": "targetgroup/ALB-TG/f6580c7699a341e8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:537124979643:targetgroup/ALB-TG/f6580c7699a341e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:537124979643:loadbalancer/app/Terraform-ALB/72dad227cc656bf5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:route-table/rtb-09571b62e72a5a267",
            "id": "rtb-09571b62e72a5a267",
            "owner_id": "537124979643",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform Routetable Private",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform Routetable Private",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:route-table/rtb-0b0042ed25e25a0d5",
            "id": "rtb-0b0042ed25e25a0d5",
            "owner_id": "537124979643",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2f933ba243d984b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform Routetable Public",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform Routetable Public",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344015ecc41ef666",
            "route_table_id": "rtb-09571b62e72a5a267",
            "subnet_id": "subnet-099dd617f28fb88b0"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.Private",
            "aws_route_table.Public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b14acab2242698",
            "route_table_id": "rtb-09571b62e72a5a267",
            "subnet_id": "subnet-0dc4f3e1abffd17d1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.Private",
            "aws_route_table.Public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01023cb049ea0ef44",
            "route_table_id": "rtb-0b0042ed25e25a0d5",
            "subnet_id": "subnet-04b497c5f8526cf81"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.Private",
            "aws_route_table.Public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a5095e3776069f",
            "route_table_id": "rtb-0b0042ed25e25a0d5",
            "subnet_id": "subnet-05f94b37fcc9c187d"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.Private",
            "aws_route_table.Public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:security-group/sg-02a949dba2bea9a99",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a949dba2bea9a99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "537124979643",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:security-group/sg-012c889bb5be61a08",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012c889bb5be61a08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a949dba2bea9a99"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "537124979643",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:security-group/sg-0c162bb525550cdbc",
            "description": "Allow inbound traffic for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c162bb525550cdbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from Web SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb6ffd252d295059"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB",
            "name_prefix": "",
            "owner_id": "537124979643",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Database Server",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Database Server",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:security-group/sg-0c5591bb34fafa47b",
            "description": "Allow incoming connections to Jenkins Machine",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb6ffd252d295059"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c5591bb34fafa47b",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "Jenkins",
            "name_prefix": "",
            "owner_id": "537124979643",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:security-group/sg-0fb6ffd252d295059",
            "description": "Allow public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.3.0/24"
                ],
                "description": "Allow outbound traffic from subnet ",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0fb6ffd252d295059",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP from all",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "537124979643",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:subnet/subnet-04b497c5f8526cf81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b497c5f8526cf81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537124979643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:subnet/subnet-05f94b37fcc9c187d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f94b37fcc9c187d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537124979643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:subnet/subnet-099dd617f28fb88b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099dd617f28fb88b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537124979643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:subnet/subnet-0dc4f3e1abffd17d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc4f3e1abffd17d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537124979643",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-02373a82ff785ae72"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537124979643:vpc/vpc-02373a82ff785ae72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0bd63d48f3623111a",
            "default_route_table_id": "rtb-0c0f5071e9af87765",
            "default_security_group_id": "sg-0014d527775b64b9c",
            "dhcp_options_id": "dopt-0d5ffb10a4a24473a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02373a82ff785ae72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0f5071e9af87765",
            "owner_id": "537124979643",
            "tags": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPN",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-09-28",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPN",
              "Owner": "Jailson Silva",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            }
          }
        }
      ]
    }
  ]
}